[package]
name = "netease-music-deduplication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
lofty = "0.6.3"
ncmdump = "0.2.0"
rust-crypto = "0.2.36"
anyhow = "1.0.58"
base64 = "0.13.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
walkdir = "2.3.2"
regex = "1.5.6"